--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "Page/home/films";
 @import "Page/home/listCinema";
 @import "Page/home/news";
+@import "Page/home/app";
 
 
 @import "Layout/header";
