--- a/scss/Helpers/_mixin.scss
+++ b/scss/Helpers/_mixin.scss
@@ -15,21 +15,9 @@
         border-color: $border-hover;
     }
 }
-
-@font-face {
-    font-family: "SF Display";
-    font-weight: 400;
-    src: url("./font/SF-UI-Display-Regular.otf");
-}
-
-@font-face {
-    font-family: "SF Display";
-    font-weight: 500;
-    src: url("./font/SF-UI-Display-Medium.otf");
-}
-
-@font-face {
-    font-family: "SF Text";
-    font-weight: 400;
-    src: url("./font/SF-UI-Text-Regular.otf");
+@mixin absolute ($top, $left,$x,$y){
+    position: absolute;
+    top:$top;
+    left:$left;
+    transform: translate($x,$y);
 }
